fixed an issue where breakpoints get cut off on macOS

--- a/styles/debugger.less
+++ b/styles/debugger.less
@@ -176,6 +176,7 @@ atom-text-editor.editor{
 
       &.icon {
         color: @background-color-error;
+        position: fixed;
         &.inactive {
           color: mix(@background-color-error, @syntax-background-color, 50%);
         }
